fix aboutMe on small sizes

--- a/src/index.css
+++ b/src/index.css
@@ -239,6 +239,10 @@ h4 {
   flex-basis: 40%
 }
 
+#aboutMeHeaderSmall {
+  display: none;
+}
+
 #aboutMeDiv {
   display: flex;
 }
@@ -469,4 +473,31 @@ h4 {
   background-color: #ff00c1;
   position: relative;
   z-index: 2;
+}
+
+@media screen and (max-width: 1000px) {
+  #aboutMeHeaderSmall {
+    display: block;
+  }
+
+  #aboutMeDiv {
+    flex-wrap: wrap;
+    flex-direction: column-reverse;
+  }
+
+  #aboutMeTextDiv {
+    flex-basis: 100%
+  }
+
+  #aboutMeTextDiv h4 {
+    display: none;
+  }
+
+  #aboutMePicDiv {
+    flex-basis: 100%;
+  }
+
+  #aboutMePic {
+    max-width: 50vw;
+  }
 }
